[package]
name = "pseudo_pool"
description = "A pool-like collection that automatically returns objects to the pool & blocks when the pool is empty"
version = "0.1.1"
edition = "2021"
authors = ["Evan Williams <evanjpw@gmail.com>"]
readme = "README.md"
license-file = "LICENSE"
keywords = ["blocking", "pool", "object-pool"]
repository = "https://github.com/evanjpw/pseudo_pool.git"
rust-version = "1.62.0"
categories = ["concurrency", "memory-management", "data-structures"]
documentation = "https://docs.rs/pseudo_pool/latest/pseudo_pool/"

[dependencies]
crossbeam-channel = { version = "0.5.13", features = ["std"] }
uuid = {  version = "1.10.0", features = ["v4"] }
thiserror = "1.0.63"

[features]
default = ["std"]
std = ["crossbeam-channel/std"]
